--- a/reverse-proxy/docker-compose.override.yml
+++ b/reverse-proxy/docker-compose.override.yml
@@ -9,8 +9,8 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
-      - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
+#      - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
+#      - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
       - ./customsettings.json:/app/appsettings.json
       - ./letsencrypt-stg-root-x1.pem:/app/staging1.pem
       - ./letsencrypt-stg-root-x2.pem:/app/staging2.pem
