Added ApiScopes configuration.

--- a/idp/customSettings.json
+++ b/idp/customSettings.json
@@ -5,8 +5,14 @@
       {
         "Name": "avatarapi-sample",
         "DisplayName": "ei8 Avatar - sample",
-        "Scopes": [ "avatarapi" ],
+        "Scopes": [ "avatarapi-sample" ],
         "ApiSecrets": [ { "Value": "" } ]
+      }
+    ],
+    "ApiScopes": [
+      {
+        "Name": "avatarapi-sample",
+        "DisplayName": "ei8 Avatar - sample"
       }
     ],
     "Clients": [
@@ -21,7 +27,7 @@
         "ClientSecrets": [ { "Value": "" } ],
         "RedirectUris": [ "https://neurul.net/sample/nc/Account/LoginCallback" ],
         "PostLogoutRedirectUris": [ "https://neurul.net/sample/nc/Account/LogoutCallback" ],
-        "AllowedScopes": [ "openid", "profile", "email", "avatarapi" ],
+        "AllowedScopes": [ "openid", "profile", "email", "avatarapi-sample" ],
         "RefreshTokenUsage": 0,
         "Enabled": true
       }
