--- a/idp/docker-compose.yml
+++ b/idp/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   idp.api:
-    image: ei8works/idp.api:0.1.5
+    image: ei8io/idp.api:0.1.6
     env_file:
       - ./variables.env
     environment:
