--- a/idp/customSettings.json
+++ b/idp/customSettings.json
@@ -3,59 +3,90 @@
     //"IssuerUri": "urn:sso.company.com",
     "ApiResources": [
       {
-        "Name": "avatarapi-sample",
-        "DisplayName": "ei8 Avatar - sample",
-        "Scopes": [ "avatarapi-sample" ],
+        "Name": "avatarapi1",
+        "DisplayName": "ei8 Avatar - 1",
+        "Scopes": [ "avatarapi1" ],
         "ApiSecrets": [ { "Value": "" } ]
       },
       {
-        "Name": "avatarapi-sample2",
-        "DisplayName": "ei8 Avatar - sample2",
-        "Scopes": [ "avatarapi-sample2" ],
+        "Name": "avatarapi2",
+        "DisplayName": "ei8 Avatar - 2",
+        "Scopes": [ "avatarapi2" ],
         "ApiSecrets": [ { "Value": "" } ]
       }
     ],
     "ApiScopes": [
       {
-        "Name": "avatarapi-sample",
-        "DisplayName": "ei8 Avatar - sample"
+        "Name": "avatarapi1",
+        "DisplayName": "ei8 Avatar - 1"
       },
       {
-        "Name": "avatarapi-sample2",
-        "DisplayName": "ei8 Avatar - sample2"
+        "Name": "avatarapi2",
+        "DisplayName": "ei8 Avatar - 2"
       }
     ],
     "Clients": [
       {
-        "ClientId": "d23-sample",
-        "ClientName": "ei8 d# - sample",
+        "ClientId": "d23-1",
+        "ClientName": "ei8 d# - 1",
         "AllowOfflineAccess": true,
         "AccessTokenLifetime": 120,
         "RequireConsent": true,	
         "RequirePkce": true,
         "AllowedGrantTypes": [ "authorization_code" ],
         "ClientSecrets": [ { "Value": "" } ],
-        "RedirectUris": [ "https://neurul.net/sample/nc/Account/LoginCallback" ],
-        "PostLogoutRedirectUris": [ "https://neurul.net/sample/nc/Account/LogoutCallback" ],
-        "AllowedScopes": [ "openid", "profile", "email", "avatarapi-sample", "avatarapi-sample2"],
+        "RedirectUris": [ "http://192.168.1.110.nip.io:64113/Account/LoginCallback" ],
+        "PostLogoutRedirectUris": [ "http://192.168.1.110.nip.io:64113/Account/LogoutCallback" ],
+        "AllowedScopes": [ "openid", "profile", "email", "avatarapi1", "avatarapi2"],
         "RefreshTokenUsage": 0,
         "Enabled": true
       },
       {
-        "ClientId": "ei8.Cortex.Chat-sample",
-        "ClientName": "ei8 Cortex Chat - sample",
+        "ClientId": "d23-2",
+        "ClientName": "ei8 d# - 2",
+        "AllowOfflineAccess": true,
+        "AccessTokenLifetime": 120,
+        "RequireConsent": true,	
+        "RequirePkce": true,
+        "AllowedGrantTypes": [ "authorization_code" ],
+        "ClientSecrets": [ { "Value": "" } ],
+        "RedirectUris": [ "https://192.168.1.110.nip.io:65113/Account/LoginCallback" ],
+        "PostLogoutRedirectUris": [ "https://192.168.1.110.nip.io:65113/Account/LogoutCallback" ],
+        "AllowedScopes": [ "openid", "profile", "email", "avatarapi1", "avatarapi2"],
+        "RefreshTokenUsage": 0,
+        "Enabled": true
+      },
+      {
+        "ClientId": "ei8.Cortex.Chat-1",
+        "ClientName": "ei8 Cortex Chat - 1",
         "AllowedGrantTypes": [ "authorization_code" ],
         "ClientSecrets": [ { "Value": "" } ],
         "RedirectUris": [ "ei8cortexchat://" ],
         "PostLogoutRedirectUris": [ "ei8cortexchat://" ],
-        "AllowedScopes": [ "openid", "profile", "avatarapi-sample" ],
+        "AllowedScopes": [ "openid", "profile", "avatarapi1" ],
       },
       {
-        "ClientId": "ei8.Cortex.Chat.Nucleus-sample",
-        "ClientName": "ei8 Cortex Chat Nucleus - sample",
+        "ClientId": "ei8.Cortex.Chat-2",
+        "ClientName": "ei8 Cortex Chat - 2",
+        "AllowedGrantTypes": [ "authorization_code" ],
+        "ClientSecrets": [ { "Value": "" } ],
+        "RedirectUris": [ "ei8cortexchat://" ],
+        "PostLogoutRedirectUris": [ "ei8cortexchat://" ],
+        "AllowedScopes": [ "openid", "profile", "avatarapi2" ],
+      },
+      {
+        "ClientId": "ei8.Cortex.Chat.Nucleus-1",
+        "ClientName": "ei8 Cortex Chat Nucleus - 1",
         "AllowedGrantTypes": [ "client_credentials" ],
         "ClientSecrets": [ { "Value": "" } ],
-        "AllowedScopes": [ "openid", "profile", "avatarapi-sample2" ]
+        "AllowedScopes": [ "openid", "profile", "avatarapi2" ]
+      },
+      {
+        "ClientId": "ei8.Cortex.Chat.Nucleus-2",
+        "ClientName": "ei8 Cortex Chat Nucleus - 2",
+        "AllowedGrantTypes": [ "client_credentials" ],
+        "ClientSecrets": [ { "Value": "" } ],
+        "AllowedScopes": [ "openid", "profile", "avatarapi1" ]
       }
     ]
   }
